vlib/v/checker/tests/map_func_void_return_err.vv
fn main() {
	list := [1,2,3].map(voids(it))
}

fn voids(arg int) {
	println(arg)
}
